# TF2ModPortal

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: manage.py
src/api/: urls.py
src/builds/: admin.py  models.py  services.py
src/builds/migrations/: 0001_initial.py  0002_remove_build_plugins_build_plugins_tags.py  0003_alter_build_id.py
src/core/: admin.py  services.py
src/metamod/: admin.py  apps.py  models.py  services.py  tasks.py
src/metamod/migrations/: 0001_initial.py  0002_alter_metamod_id.py
src/plugins/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
src/plugins/api/: serializers.py  urls.py  views.py
src/plugins/migrations/: 0001_initial.py  0002_category_supportedgame_remove_plugin_cfg_file_and_more.py  0003_alter_pluginfile_file.py  0004_pluginfile_file_name.py  0005_alter_plugin_author_alter_plugin_name.py  0006_alter_plugin_short_id_alter_plugin_version.py  0007_alter_category_name_alter_pluginfile_file_name_and_more.py  0008_alter_plugin_slug.py  0009_remove_pluginfile_plugin_tag_pluginfile_tag.py  0010_remove_pluginfile_tag_tag_files.py  0011_remove_tag_files_pluginfile_tag.py  0012_plugin_original_name.py  0013_tag_archive_file.py  0014_alter_tag_archive_file.py  0015_alter_category_id_alter_plugin_id_and_more.py  0016_alter_pluginfile_file.py
src/sourcemod/: admin.py  apps.py  models.py  services.py  tasks.py
src/sourcemod/migrations/: 0001_initial.py  0003_alter_sourcemod_linux_file_and_more.py  (+2 more)
src/tf2modportal/: asgi.py  celery.py  services.py  settings.py  urls.py  views.py  wsgi.py
(+18 files in other folders)
